# gitignore-ultimate-server

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
src/: backend.rs  file.rs  main.rs  workspace.rs
src/features/: completion.rs
