[package]
name = "gitignore_ultimate_server"
version = "0.0.1"
edition = "2021"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.tower-lsp]
version = "*"

[dependencies.dashmap]
version = "5"

[dependencies.ropey]
version = "1"

[dependencies.percent-encoding]
version = "2.1.0"
